k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: network42
  namespace: production
spec:
  selector:
    app: 42network
    role: web
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
