k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: network42-ingress
  namespace: production
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - 42network.in
    secretName: 42network-tls
  rules:
    - host: 42network.in
      http:
        paths:
        - path: /
          backend:
            serviceName: network42
            servicePort: 80
